frontend/www/sass/components/_markdown.scss
.markdown {
  h1 {
    font-size: 1.3em;
    margin: 1em 0 0.5em 0;
    font-weight: bold;
  }

  h2 {
    font-size: 1.1em;
    margin: 1em 0 0.5em 0;
    font-weight: bold;
  }

  h3 {
    font-size: 1em;
    margin: 1em 0 0.5em 0;
    font-weight: bold;
  }

  p {
    line-height: 150%;
    text-align: justify;
  }

  ul {
    list-style: disc;
  }

  ol {
    list-style: decimal;
  }

  ul li,
  ol li {
    margin-left: 2em;
    text-align: justify;
  }

  figure {
    text-align: center;
    page-break-inside: avoid;
  }

  table td {
    border: 1px solid #000;
    padding: 10px;
  }

  table th {
    text-align: center;
  }

  table.sample_io {
    margin: 5px;
    padding: 5px;

    tbody {
      background: #eee;
      border: 1px solid #000;
    }

    th {
      padding: 10px;
      border-top: 0;
    }

    td {
      vertical-align: top;
      padding: 10px;
      border: 1px solid #000;
    }

    pre {
      white-space: pre;
      word-break: keep-all;
      word-wrap: normal;
      background: transparent;
      border: 0;
      padding: 0;
      margin: inherit;
    }
  }

  iframe {
    width: 100%;
    height: 400px;
  }

  a.libinteractive-help {
    float: right;
  }

  img {
    max-width: 100%;
  }
}

